--- a/NYCParkLocator/Base.lproj/Main.storyboard
+++ b/NYCParkLocator/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,12 +15,129 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N1U-tu-W92">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="157"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NYC Park Locator" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MnQ-4s-cAv">
+                                        <rect key="frame" x="139.5" y="68" width="135" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="idJ-Ua-awZ">
+                                        <rect key="frame" x="0.0" y="89" width="414" height="68"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbO-ft-yCY">
+                                                <rect key="frame" x="10" y="19" width="30" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="wbO-ft-yCY" secondAttribute="height" multiplier="1:1" id="hVq-b2-HoL"/>
+                                                    <constraint firstAttribute="height" constant="30" id="wej-yt-dIV"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                                <color key="tintColor" systemColor="labelColor"/>
+                                                <state key="normal" image="location.fill" catalog="system">
+                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="regular"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="didPressMyLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7HM-n0-DUH"/>
+                                                </connections>
+                                            </button>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dyy-Vl-ESM">
+                                                <rect key="frame" x="50" y="15.5" width="354" height="37"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="trq-F8-med">
+                                                        <rect key="frame" x="0.0" y="2.5" width="32" height="31.5"/>
+                                                        <color key="tintColor" systemColor="placeholderTextColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="32" id="6wz-fi-sNo"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search Map" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iXD-TL-2hr">
+                                                        <rect key="frame" x="32" y="1.5" width="322" height="34"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="iXD-TL-2hr" firstAttribute="height" secondItem="Dyy-Vl-ESM" secondAttribute="height" multiplier="0.918919" id="1yg-vA-PHf"/>
+                                                    <constraint firstAttribute="trailing" secondItem="iXD-TL-2hr" secondAttribute="trailing" id="A42-Np-nwf"/>
+                                                    <constraint firstItem="trq-F8-med" firstAttribute="centerY" secondItem="Dyy-Vl-ESM" secondAttribute="centerY" id="Hr0-Wu-5HR"/>
+                                                    <constraint firstItem="iXD-TL-2hr" firstAttribute="centerY" secondItem="Dyy-Vl-ESM" secondAttribute="centerY" id="Qu6-gH-Gps"/>
+                                                    <constraint firstItem="trq-F8-med" firstAttribute="leading" secondItem="Dyy-Vl-ESM" secondAttribute="leading" id="l8A-fY-C3v"/>
+                                                    <constraint firstItem="iXD-TL-2hr" firstAttribute="leading" secondItem="trq-F8-med" secondAttribute="trailing" id="mXc-eE-CDM"/>
+                                                    <constraint firstItem="trq-F8-med" firstAttribute="height" secondItem="Dyy-Vl-ESM" secondAttribute="height" multiplier="0.9" id="uJc-4I-hiO"/>
+                                                    <constraint firstAttribute="height" constant="37" id="zqo-yH-gCx"/>
+                                                </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                        <integer key="value" value="10"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </view>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="Dyy-Vl-ESM" firstAttribute="centerY" secondItem="wbO-ft-yCY" secondAttribute="centerY" id="1ME-U6-fre"/>
+                                            <constraint firstItem="Dyy-Vl-ESM" firstAttribute="leading" secondItem="wbO-ft-yCY" secondAttribute="trailing" constant="10" id="6dN-1x-YKp"/>
+                                            <constraint firstItem="wbO-ft-yCY" firstAttribute="leading" secondItem="idJ-Ua-awZ" secondAttribute="leading" constant="10" id="UXt-Ii-HbQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="Dyy-Vl-ESM" secondAttribute="trailing" constant="10" id="bhy-5I-rWa"/>
+                                            <constraint firstItem="wbO-ft-yCY" firstAttribute="centerY" secondItem="idJ-Ua-awZ" secondAttribute="centerY" id="h8K-hE-uHD"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="idJ-Ua-awZ" secondAttribute="trailing" id="0Ol-Qv-qIO"/>
+                                    <constraint firstItem="MnQ-4s-cAv" firstAttribute="centerX" secondItem="N1U-tu-W92" secondAttribute="centerX" id="4j3-xZ-4ko"/>
+                                    <constraint firstItem="idJ-Ua-awZ" firstAttribute="leading" secondItem="N1U-tu-W92" secondAttribute="leading" id="Ncq-uq-dvI"/>
+                                    <constraint firstItem="idJ-Ua-awZ" firstAttribute="top" secondItem="MnQ-4s-cAv" secondAttribute="bottom" id="Nmx-pc-BTj"/>
+                                    <constraint firstItem="MnQ-4s-cAv" firstAttribute="centerY" secondItem="N1U-tu-W92" secondAttribute="centerY" id="UET-lg-EnQ"/>
+                                    <constraint firstAttribute="bottom" secondItem="idJ-Ua-awZ" secondAttribute="bottom" id="cqz-DV-z0q"/>
+                                </constraints>
+                            </view>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="q3C-NV-oIJ">
+                                <rect key="frame" x="0.0" y="157" width="414" height="705"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="cqN-I6-hmT"/>
+                                </connections>
+                            </mapView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="N1U-tu-W92" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="3WN-wr-ulE"/>
+                            <constraint firstItem="N1U-tu-W92" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BWQ-rQ-4Rf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="q3C-NV-oIJ" secondAttribute="trailing" id="Df4-cT-rx5"/>
+                            <constraint firstItem="q3C-NV-oIJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="HU9-HF-Sic"/>
+                            <constraint firstItem="q3C-NV-oIJ" firstAttribute="top" secondItem="N1U-tu-W92" secondAttribute="bottom" id="KKs-G3-qB7"/>
+                            <constraint firstItem="N1U-tu-W92" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.175" id="dDD-3H-AU3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="q3C-NV-oIJ" secondAttribute="bottom" id="t7L-7V-EQP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="N1U-tu-W92" secondAttribute="trailing" id="tmf-eE-omv"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="q3C-NV-oIJ" id="M1Y-Pd-Jg7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="124"/>
+            <point key="canvasLocation" x="137.68115942028987" y="123.88392857142857"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="location.fill" catalog="system" width="128" height="121"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="placeholderTextColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGroupedBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
