--- a/NYCParkLocator/Base.lproj/Main.storyboard
+++ b/NYCParkLocator/Base.lproj/Main.storyboard
@@ -17,58 +17,63 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N1U-tu-W92">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="157"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="143.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NYC Park Locator" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MnQ-4s-cAv">
-                                        <rect key="frame" x="139.5" y="68" width="135" height="21"/>
+                                        <rect key="frame" x="139.5" y="61" width="135" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="idJ-Ua-awZ">
-                                        <rect key="frame" x="0.0" y="89" width="414" height="68"/>
+                                        <rect key="frame" x="0.0" y="82" width="414" height="61.5"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbO-ft-yCY">
-                                                <rect key="frame" x="10" y="19" width="30" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" secondItem="wbO-ft-yCY" secondAttribute="height" multiplier="1:1" id="hVq-b2-HoL"/>
-                                                    <constraint firstAttribute="height" constant="30" id="wej-yt-dIV"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
-                                                <color key="tintColor" systemColor="labelColor"/>
-                                                <state key="normal" image="location.fill" catalog="system">
-                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="regular"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="didPressMyLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7HM-n0-DUH"/>
-                                                </connections>
-                                            </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dyy-Vl-ESM">
-                                                <rect key="frame" x="50" y="15.5" width="354" height="37"/>
+                                                <rect key="frame" x="10" y="10" width="329" height="37"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="trq-F8-med">
-                                                        <rect key="frame" x="0.0" y="2.5" width="32" height="31.5"/>
+                                                        <rect key="frame" x="0.0" y="4.5" width="32" height="28"/>
                                                         <color key="tintColor" systemColor="placeholderTextColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="32" id="6wz-fi-sNo"/>
+                                                            <constraint firstAttribute="height" constant="30" id="Kqa-K2-EOb"/>
+                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="Ql0-Ik-e44"/>
                                                         </constraints>
                                                     </imageView>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search Map" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iXD-TL-2hr">
-                                                        <rect key="frame" x="32" y="1.5" width="322" height="34"/>
+                                                        <rect key="frame" x="37" y="3.5" width="292" height="30"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="30" id="GDC-3v-EFl"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbO-ft-yCY">
+                                                        <rect key="frame" x="294" y="3.5" width="30" height="30"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="30" id="DRm-PM-ue1"/>
+                                                            <constraint firstAttribute="height" constant="30" id="dod-i9-EiZ"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                                        <color key="tintColor" systemColor="systemGreenColor"/>
+                                                        <state key="normal" image="location" catalog="system">
+                                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="regular"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="didPressMyLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7HM-n0-DUH"/>
+                                                        </connections>
+                                                    </button>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
                                                 <constraints>
-                                                    <constraint firstItem="iXD-TL-2hr" firstAttribute="height" secondItem="Dyy-Vl-ESM" secondAttribute="height" multiplier="0.918919" id="1yg-vA-PHf"/>
-                                                    <constraint firstAttribute="trailing" secondItem="iXD-TL-2hr" secondAttribute="trailing" id="A42-Np-nwf"/>
-                                                    <constraint firstItem="trq-F8-med" firstAttribute="centerY" secondItem="Dyy-Vl-ESM" secondAttribute="centerY" id="Hr0-Wu-5HR"/>
-                                                    <constraint firstItem="iXD-TL-2hr" firstAttribute="centerY" secondItem="Dyy-Vl-ESM" secondAttribute="centerY" id="Qu6-gH-Gps"/>
-                                                    <constraint firstItem="trq-F8-med" firstAttribute="leading" secondItem="Dyy-Vl-ESM" secondAttribute="leading" id="l8A-fY-C3v"/>
-                                                    <constraint firstItem="iXD-TL-2hr" firstAttribute="leading" secondItem="trq-F8-med" secondAttribute="trailing" id="mXc-eE-CDM"/>
-                                                    <constraint firstItem="trq-F8-med" firstAttribute="height" secondItem="Dyy-Vl-ESM" secondAttribute="height" multiplier="0.9" id="uJc-4I-hiO"/>
-                                                    <constraint firstAttribute="height" constant="37" id="zqo-yH-gCx"/>
+                                                    <constraint firstItem="trq-F8-med" firstAttribute="centerY" secondItem="Dyy-Vl-ESM" secondAttribute="centerY" id="722-Cu-kuV"/>
+                                                    <constraint firstItem="iXD-TL-2hr" firstAttribute="centerY" secondItem="Dyy-Vl-ESM" secondAttribute="centerY" id="76V-Jl-NzO"/>
+                                                    <constraint firstItem="trq-F8-med" firstAttribute="leading" secondItem="Dyy-Vl-ESM" secondAttribute="leading" id="ELf-e5-DpR"/>
+                                                    <constraint firstAttribute="height" constant="37" id="TB9-Es-Hfq"/>
+                                                    <constraint firstItem="wbO-ft-yCY" firstAttribute="centerY" secondItem="Dyy-Vl-ESM" secondAttribute="centerY" id="WA8-CR-2Nw"/>
+                                                    <constraint firstItem="iXD-TL-2hr" firstAttribute="leading" secondItem="trq-F8-med" secondAttribute="trailing" constant="5" id="Xqr-K8-bdD"/>
+                                                    <constraint firstAttribute="trailing" secondItem="wbO-ft-yCY" secondAttribute="trailing" constant="5" id="mxQ-16-yyi"/>
+                                                    <constraint firstAttribute="trailing" secondItem="iXD-TL-2hr" secondAttribute="trailing" id="rrB-kv-IhY"/>
                                                 </constraints>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -76,13 +81,24 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8B5-7V-TZW">
+                                                <rect key="frame" x="349" y="10" width="55" height="37"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="55" id="6cl-d1-8Oh"/>
+                                                    <constraint firstAttribute="height" constant="37" id="jUR-bR-Hjc"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                                <state key="normal" title="Filter">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="Dyy-Vl-ESM" firstAttribute="centerY" secondItem="wbO-ft-yCY" secondAttribute="centerY" id="1ME-U6-fre"/>
-                                            <constraint firstItem="Dyy-Vl-ESM" firstAttribute="leading" secondItem="wbO-ft-yCY" secondAttribute="trailing" constant="10" id="6dN-1x-YKp"/>
-                                            <constraint firstItem="wbO-ft-yCY" firstAttribute="leading" secondItem="idJ-Ua-awZ" secondAttribute="leading" constant="10" id="UXt-Ii-HbQ"/>
-                                            <constraint firstAttribute="trailing" secondItem="Dyy-Vl-ESM" secondAttribute="trailing" constant="10" id="bhy-5I-rWa"/>
-                                            <constraint firstItem="wbO-ft-yCY" firstAttribute="centerY" secondItem="idJ-Ua-awZ" secondAttribute="centerY" id="h8K-hE-uHD"/>
+                                            <constraint firstItem="8B5-7V-TZW" firstAttribute="centerY" secondItem="Dyy-Vl-ESM" secondAttribute="centerY" id="PAo-HP-Jtr"/>
+                                            <constraint firstItem="Dyy-Vl-ESM" firstAttribute="top" secondItem="idJ-Ua-awZ" secondAttribute="top" constant="10" id="Ybb-EX-xA9"/>
+                                            <constraint firstItem="Dyy-Vl-ESM" firstAttribute="leading" secondItem="idJ-Ua-awZ" secondAttribute="leading" constant="10" id="bgB-Na-AtF"/>
+                                            <constraint firstAttribute="trailing" secondItem="8B5-7V-TZW" secondAttribute="trailing" constant="10" id="cGD-r7-fOR"/>
+                                            <constraint firstItem="8B5-7V-TZW" firstAttribute="leading" secondItem="Dyy-Vl-ESM" secondAttribute="trailing" constant="10" id="jdr-0W-bHF"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -97,7 +113,7 @@
                                 </constraints>
                             </view>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="q3C-NV-oIJ">
-                                <rect key="frame" x="0.0" y="157" width="414" height="705"/>
+                                <rect key="frame" x="0.0" y="143.5" width="414" height="752.5"/>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="cqN-I6-hmT"/>
                                 </connections>
@@ -110,8 +126,8 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="q3C-NV-oIJ" secondAttribute="trailing" id="Df4-cT-rx5"/>
                             <constraint firstItem="q3C-NV-oIJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="HU9-HF-Sic"/>
                             <constraint firstItem="q3C-NV-oIJ" firstAttribute="top" secondItem="N1U-tu-W92" secondAttribute="bottom" id="KKs-G3-qB7"/>
-                            <constraint firstItem="N1U-tu-W92" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.175" id="dDD-3H-AU3"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="q3C-NV-oIJ" secondAttribute="bottom" id="t7L-7V-EQP"/>
+                            <constraint firstAttribute="bottom" secondItem="q3C-NV-oIJ" secondAttribute="bottom" id="aG0-xN-qee"/>
+                            <constraint firstItem="N1U-tu-W92" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.16" id="dDD-3H-AU3"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="N1U-tu-W92" secondAttribute="trailing" id="tmf-eE-omv"/>
                         </constraints>
                     </view>
@@ -125,11 +141,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="location.fill" catalog="system" width="128" height="121"/>
+        <image name="location" catalog="system" width="128" height="121"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="placeholderTextColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
